--- a/Time series model with prophet.ipynb
+++ b/Time series model with prophet.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importar librerias\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
